tests/NormalTests/paczka1/fuzzy1/57532453.err
Error in line 2: wnZZ A756 97,3
Error in line 10: XYdqE9zB A490 217,3
Error in line 15: LX2SR A756 41,6
Error in line 14: fhtd A756 63,0
Error in line 21: fhtd S211 4,4
Error in line 22: fhtd A490 5,1
Error in line 30: A490 S211 24,7
